--- a/src/components/popup/PopUp.module.css
+++ b/src/components/popup/PopUp.module.css
@@ -1,10 +1,12 @@
 ._container {
     position: fixed;
+    overflow: auto;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     z-index: 2;
@@ -31,6 +33,10 @@ p {
     font-size: 20px;
     padding: 15px;
     background-color: rgb(149, 209, 136);
+}
+
+.addImg {
+    margin: 100px 0 10px 0;
 }
 
 .select {
@@ -60,11 +66,22 @@ p {
     margin: 5px;
 }
 
+.imgDiv {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
 .img {
-    height: 200px;
-    width: 200px;
+    height: 100px;
+    width: 100px;
     border-radius: 20px;
-    margin: 10px;
+    margin-top: 5px;
+    box-shadow: 0 0 5px 2px darkolivegreen;
+}
+
+.imgHide {
+    visibility: hidden;
 }
 
 .h1 {
