--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+.body {
+    overflow: hidden;
+}
+
 .fullscreen {
     position: fixed;
     width: 100%;
@@ -82,6 +86,7 @@
 .bar {
     display: flex;
     margin: 10px 0;
+    align-items: center;
 }
 
 .h1 {
@@ -99,4 +104,11 @@
 
 .p {
     margin-left: 20px;
+}
+
+.img {
+    height: 200px;
+    width: 200px;
+    border-radius: 20px;
+    margin: 10px 0;
 }
